# assignment1

./: .coverage  .env  .env.example  .pre-commit-config.yaml  pyproject.toml  readme.md
app/: main.py
app/api/v1/routes/: donor_routes.py  health_route.py
app/api/v1/schemas/: __init__.py  common.py  donor_schema.py
app/core/: __init__.py  app_config.py  async_context.py  config.py  coorelation.py  exception_handler.py  log_config.py  otel_setup.py
app/db/: __init__.py  bootstrap_db.py  session.py
app/db/models/: __init__.py  donor_models.py
app/service/: __init__.py  donor_service.py  health_service.py
local_db/: blood_donation.db
tests/: conftest.py
tests/api/v1/routes/: donor_routes_test.py
tests/service/: donor_service_test.py
